# Brick_Mandelbrot

./: LICENSE  README.md  final.cabal
.stack-work/: stack.sqlite3
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: Main.hs  Mandelbrot.hs
