name:                final
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/cleggct/final#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Clegg
maintainer:          cleggct@gmail.com
copyright:           Chris Clegg
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable final
  hs-source-dirs:      src
  other-modules:       Mandelbrot
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       ,brick
                       ,vty
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
                       -threaded
